--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -3,7 +3,7 @@ name: hello-world
 on: push
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - run: make say-hello
